# Graywedding

./: .project  CMakeLists.txt  Gray_Wedding.py  README.md  UEFITool.patch  fitparser_bindings.cpp  fitparser_wrapper.cpp  fitparser_wrapper.h
Alepth_plugins/DxeBlobVerifier_FACT_plugin/: install.py
Alepth_plugins/DxeBlobVerifier_FACT_plugin/code/: dxeblobverifier.py
Alepth_plugins/DxeBlobVerifier_FACT_plugin/test/: test_dxeblobverifier.py
Alepth_plugins/NvramParser_Fact_Plugin/: install.py
Alepth_plugins/NvramParser_Fact_Plugin/code/: nvramparser.py  spec_variables.json
Alepth_plugins/NvramParser_Fact_Plugin/test/: test_nvramparser.py
Alepth_plugins/codescanner/: README.md  install.py  requirements.txt
Alepth_plugins/codescanner/code/: codescanner.py
Alepth_plugins/codescanner/routes/: routes.py
Alepth_plugins/codescanner/test/: test_codescanner.py
Alepth_plugins/codescanner/view/: codescanner.html
Docs/FW-Verification/: Introduction to Key Usage in Integrated Firmware Images.html
Docs/FW-Verification/Introduction to Key Usage in Integrated Firmware Images_files/: 16492890048.html  1862509553847872  29553cae-383d-4de5-a89f-0aa7132857a1.js  5fd9eedd  EmbeddedTargetModule.js  RC08d1fa52046943e2bfee37f179119f1e-source.min.js  RC15fc910827e44c3fb12226b8317ab101-source.min.js  RC22c823f901ff4e80b513871b5da71968-source.min.js  RC3b7f093741f6497282bf9f5fa9dccd0a-source.min.js  RC3f2e0832b00044a0ae9cca08336b9e29-source.min.js  RC4ae693189e704718996315ef376ec714-source.min.js  RC561baf435f1c4526b1d504287beb7545-source.min.js  SupportPageTool.js  (+81 more)
(+2 files in other folders)
